2012-12-05  Kent Tamura  <tkent@chromium.org>

        INPUT_MULTIPLE_FIELDS_UI: The hour field and the am/pm field should support read-only state correctly
        https://bugs.webkit.org/show_bug.cgi?id=104210

        Reviewed by Kentaro Hara.

        * fast/forms/time/time-appearance-basic.html:
        Add test cases for step=86400 (24 hours)
        * platform/chromium-mac/fast/forms/time/time-appearance-basic-expected.png:
        * platform/chromium/TestExpectations:

2012-12-05  Dan Beam  <dbeam@chromium.org>

        HTMLFormElement#requestAutocomplete() should require a user action
        https://bugs.webkit.org/show_bug.cgi?id=102320

        Reviewed by Kent Tamura.

        This patch dispatches an autocompleteerror when HTMLFormElement::requestAutocomplete() is called while not processing
        a user gesture.

        * fast/forms/form-request-autocomplete.html:

        Added a test to ensure that dispatching a call to HTMLFormElement#requestAutocomplete() in a setTimeout() (which will
        never be a user gesture) always fails.

2012-12-05  Andrei Bucur  <abucur@adobe.com>

        [CSS Regions] Blocks don't relayout children if the width of a region changes
        https://bugs.webkit.org/show_bug.cgi?id=103993

        Reviewed by David Hyatt.

        The first test covers the case of reducing the width of a region for a block content node.
        The second test covers the case of expanding the width of a region for a block content node.
        The third test covers the case of reducing the width of a region for an inline content node.

        * fast/regions/region-width-change-relayout-1-expected.html: Added.
        * fast/regions/region-width-change-relayout-1.html: Added.
        * fast/regions/region-width-change-relayout-2-expected.html: Added.
        * fast/regions/region-width-change-relayout-2.html: Added.
        * fast/regions/region-width-change-relayout-3-expected.html: Added.