@@ -1,0 +1,9 @@
+Test for Bug 102459. OK if not crashed.
+
+
+PASS unless crash.
+
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
