@@ -1,0 +1,12 @@
+<!DOCTYPE html>
+<html>
+<body>
+<script src="../../js/resources/js-test-pre.js"></script>
+<h1>Test for <a href="https://bugs.webkit.org/show_bug.cgi?id=102459">Bug 102459</a>. OK if not crashed.</h1>
+<progress indeterminate="true"></progress>
+<p>PASS unless crash.</p>
+
+<pre id="console"></pre>
+<script src="../../js/resources/js-test-post.js"></script>
+</body>
+</html>
