@@ -1,3 +1,13 @@
+2012-12-05  Shinya Kawanaka  <shinyak@chromium.org>
+
+        [Chromium] DRT on Windows crashes when a testcase has a progress element in indeterminate state
+        https://bugs.webkit.org/show_bug.cgi?id=102459
+
+        Reviewed by Dimitri Glazkov.
+
+        * fast/dom/HTMLProgressElement/progress-element-indeterminate-crash-expected.txt: Added.
+        * fast/dom/HTMLProgressElement/progress-element-indeterminate-crash.html: Added.
+
 2012-12-05  Kent Tamura  <tkent@chromium.org>
 
         INPUT_MULTIPLE_FIELDS_UI: The hour field and the am/pm field should support read-only state correctly
